--- a/css/LQ Management copy/index.html
+++ b/css/LQ Management copy/index.html
@@ -69,7 +69,7 @@
         <a href="#" id="share-wa" class="sharer button"><i class="fa fa-3x fa-whatsapp"></i></a>
 
 
-      <a href="" id="share-fb" class="sharer button"><i class="fa fa-3x fa-facebook-square"></i></a>
+      <a href="#" id="share-fb" class="sharer button"><i class="fa fa-3x fa-facebook-square"></i></a>
       <a href="#" id="share-tw" class="sharer button"><i class="fa fa-3x fa-twitter-square"></i></a>
       <a href="#" id="share-li" class="sharer button"><i class="fa fa-3x fa-linkedin-square"></i></a>
       <a href="#" id="share-gp" class="sharer button"><i class="fa fa-3x fa-google-plus-square"></i></a>
@@ -107,14 +107,14 @@
 
 
     <div class="social container">
-        <a href="" id="share-wa" class="sharer button"><i class="fa fa-3x fa-whatsapp"></i></a>
+        <a href="#" id="share-wa" class="sharer button"><i class="fa fa-3x fa-whatsapp"></i></a>
 
 
-      <a href="https://www.facebook.com/sharer/sharer.php?u=twitter.com" id="share-fb" class="button"><i class="fa fa-3x fa-facebook-square"></i></a>
-      <a href="" id="share-tw" class="sharer button"><i class="fa fa-3x fa-twitter-square"></i></a>
-      <a href="" id="share-li" class="sharer button"><i class="fa fa-3x fa-linkedin-square"></i></a>
-      <a href="" id="share-gp" class="sharer button"><i class="fa fa-3x fa-google-plus-square"></i></a>
-      <a href="" id="share-em" class="sharer button"><i class="fa fa-3x fa-envelope-square"></i></a>
+      <a href="#" id="share-fb" class="sharer button"><i class="fa fa-3x fa-facebook-square"></i></a>
+      <a href="#" id="share-tw" class="sharer button"><i class="fa fa-3x fa-twitter-square"></i></a>
+      <a href="#" id="share-li" class="sharer button"><i class="fa fa-3x fa-linkedin-square"></i></a>
+      <a href="#" id="share-gp" class="sharer button"><i class="fa fa-3x fa-google-plus-square"></i></a>
+      <a href="#" id="share-em" class="sharer button"><i class="fa fa-3x fa-envelope-square"></i></a>
     </div>
     </div>
 
@@ -132,7 +132,7 @@
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
       <script type="text/javascript" src="app.js"></script>
-
+      <script src="https://cdn.jsdelivr.net/sharer.js/latest/sharer.min.js"></script>
 
 
 </body>
